--- a/indext.html
+++ b/indext.html
@@ -29,7 +29,7 @@
     <header class="bg-gray-900 shadow-lg sticky top-0 z-50">
         <div class="container mx-auto px-4 py-4 flex items-center justify-between">
             <a href="#" class="text-2xl font-bold text-white">
-                <img src="uploaded:image_dfaa65.png-1cf2c695-6ff6-43e9-8681-410f75391a70" alt="Electric Moto EC Logo" class="h-10 inline-block mr-2" />
+                <img src="image_dfaa65.png" alt="Electric Moto EC Logo" class="h-10 inline-block mr-2" />
                 Electric Moto EC
             </a>
             <nav class="hidden md:flex space-x-6">
@@ -105,27 +105,27 @@
                 <div class="flex flex-wrap justify-center gap-8">
                     <!-- Product Image 1 -->
                     <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
-                        <img src="uploaded:1.jpg-e0ccd923-4b96-4b08-bdb5-b60144a06e50" alt="Producto 1" class="rounded-md w-full h-auto object-cover mb-4">
+                        <img src="1.jpg" alt="Producto 1" class="rounded-md w-full h-auto object-cover mb-4">
                     </div>
                     <!-- Product Image 2 -->
                     <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
-                        <img src="uploaded:2.jpg-ff5413db-4e93-4c82-8cdb-5467e568218c" alt="Producto 2" class="rounded-md w-full h-auto object-cover mb-4">
+                        <img src="2.jpg" alt="Producto 2" class="rounded-md w-full h-auto object-cover mb-4">
                     </div>
                     <!-- Product Image 3 -->
                     <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
-                        <img src="uploaded:3.jpg-496cea7c-8eed-4fa1-a3c3-d1e8ef29b0e6" alt="Producto 3" class="rounded-md w-full h-auto object-cover mb-4">
+                        <img src="3.jpg" alt="Producto 3" class="rounded-md w-full h-auto object-cover mb-4">
                     </div>
                     <!-- Product Image 4 -->
                     <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
-                        <img src="uploaded:4.jpg-f4520b53-a337-4f92-a0b5-fa5ffa6ae306" alt="Producto 4" class="rounded-md w-full h-auto object-cover mb-4">
+                        <img src="4.jpg" alt="Producto 4" class="rounded-md w-full h-auto object-cover mb-4">
                     </div>
                     <!-- Product Image 5 -->
                     <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
-                        <img src="uploaded:5.jpg-a5d6ab0e-5587-42f8-b492-dbb4f542f662" alt="Producto 5" class="rounded-md w-full h-auto object-cover mb-4">
+                        <img src="5.jpg" alt="Producto 5" class="rounded-md w-full h-auto object-cover mb-4">
                     </div>
                     <!-- Product Image 6 - Accesorios -->
                     <div class="bg-gray-800 p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
-                        <img src="uploaded:Heading.jpg-3b5de2f4-c99c-4413-9a50-1888f956ca53" alt="Accesorios de Electric Moto EC" class="rounded-md w-full h-auto object-cover mb-4">
+                        <img src="Heading.jpg" alt="Accesorios de Electric Moto EC" class="rounded-md w-full h-auto object-cover mb-4">
                         <div class="text-center font-bold text-white mt-2">Accesorios</div>
                     </div>
                 </div>
