--- a/indext.html
+++ b/indext.html
@@ -29,7 +29,7 @@
     <header class="bg-gray-900 shadow-lg sticky top-0 z-50">
         <div class="container mx-auto px-4 py-4 flex items-center justify-between">
             <a href="#" class="text-2xl font-bold text-white">
-                <img src="image_dfaa65.png" alt="Electric Moto EC Logo" class="h-10 inline-block mr-2" />
+                <img src="image_dfaa65.jpg" alt="Electric Moto EC Logo" class="h-10 inline-block mr-2" />
                 Electric Moto EC
             </a>
             <nav class="hidden md:flex space-x-6">
@@ -195,7 +195,7 @@
             const generateImage = async () => {
                 const payload = {
                     instances: {
-                        prompt: "Un hombre joven latinoamericano con una motocicleta eléctrica estilo Vespa, que tenga los colores del logo de Electric Moto EC (negro y amarillo) y el logo en la moto y en la ropa. Con un fondo vibrante que muestre elementos de energía limpia, como paneles solares y un cielo despejado. La imagen debe tener un estilo fotográfico, dinámico y moderno.",
+                        prompt: "Un hombre joven latinoamericano sonriendo mientras monta un scooter eléctrico moderno. El scooter es de color amarillo brillante. La ropa del hombre es de color neutro y casual. El logo de Electric Moto EC es visible en el vehículo. El hombre mira hacia la derecha. El fondo es un paisaje urbano futurista con elementos de energía limpia. La imagen debe tener un estilo fotográfico, dinámico y moderno.",
                     },
                     parameters: {
                         "sampleCount": 1
