--- a/indext.html
+++ b/indext.html
@@ -29,7 +29,7 @@
     <header class="bg-gray-900 shadow-lg sticky top-0 z-50">
         <div class="container mx-auto px-4 py-4 flex items-center justify-between">
             <a href="#" class="text-2xl font-bold text-white">
-                <img src="image_dfaa65.jpg" alt="Electric Moto EC Logo" class="h-10 inline-block mr-2" />
+                <img src="logoelectricmotoec.png" alt="Electric Moto EC Logo" class="h-10 inline-block mr-2" />
                 Electric Moto EC
             </a>
             <nav class="hidden md:flex space-x-6">
