--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div class="container mx-auto px-4 text-center">
                 <h2 class="text-3xl md:text-4xl font-bold mb-4">Contáctanos</h2>
                 <p class="text-gray-300 mb-8 max-w-2xl mx-auto">
-                    ¿Listo para empezar? Contáctanos directamente por WhatsApp o correo electrónico, o visítanos en nuestra ubicación.
+                    ¿Listo para empezar? Contáctanos directamente por WhatsApp, correo electrónico o redes sociales.
                 </p>
                 <div class="space-y-4">
                     <p class="flex items-center justify-center text-lg">
@@ -176,6 +176,13 @@
                             <path d="M.05 3.555A2 2 0 0 1 2 2h12a2 2 0 0 1 1.95 1.555L8 8.414.05 3.555zM0 4.697v7.04A2 2 0 0 0 2 14h12a2 2 0 0 0 2-2.262V4.697l-5.803 3.54L8 10.435.05 3.555z"/>
                         </svg>
                         <a href="mailto:electromotoec@gmail.com" class="hover:underline">Correo: electricmotoec@gmail.com</a>
+                    </p>
+                    <p class="flex items-center justify-center text-lg">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-6 h-6 mr-2 text-pink-500" viewBox="0 0 16 16">
+                            <path d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8s.01 2.444.048 3.297c.04.853.174 1.434.372 1.942.206.526.478.972.923 1.417.444.445.89.719 1.416.923.509.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.297-.048c.853-.04 1.434-.174 1.942-.372.526-.206.972-.478 1.417-.923.445-.445.719-.89.923-1.416.198-.509.333-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.297c-.04-.852-.174-1.433-.372-1.941a3.927 3.927 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.17-.002 8-.002zm0 1.5a6.5 6.5 0 1 1 0 13 6.5 6.5 0 0 1 0-13z"/>
+                            <path d="M12 7.5a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm-5 4a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm2-2a.5.5 0 1 0-.5-.5.5.5 0 0 0 .5.5z"/>
+                        </svg>
+                        <a href="https://www.instagram.com/electricmotoec" target="_blank" class="hover:underline">Instagram: @electricmotoec</a>
                     </p>
                     <p class="flex items-start justify-center text-lg">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="w-6 h-6 mr-2 text-blue-500 flex-shrink-0 mt-1" viewBox="0 0 16 16">
